2002-08-03  Gaute Lindkvist <lindkvis@linpro.no>

	Corrected some issues with the Bright theme. Mainly
	making sure the text does not clip, as well as increasing
	the size of the menu icon.
	
2002-08-01  Mark McLoughlin  <mark@skynet.ie>

	Implements support for _NET_WM_ALLOWED_ACTIONS.
	Fixes #84282.

	* src/display.[ch]: (meta_display_open): add
	_NET_WM_ALLOWED_ACTIONS atoms.

	* src/screen.c: (set_supported_hint): set them
	as being supported.

	* src/window.c:
	(set_allowed_actions_hint): impl setting
	_NET_WM_ALLOWED_ACTIONS.
	(recalc_window_features): use it here, but only
	if things have changed.

2002-08-01  Christophe Fergeau  <teuf@users.sourceforge.net>

	* src/metacity-dialog.c: focus the "Close" button by default on 
	the dialog which appears at exit when some apps can't be session
	managed

2002-08-01  Mark McLoughlin  <mark@skynet.ie>

	* src/session.c:
	(save_yourself_possibly_done): send a SaveYourselfDone
	if we're skipping this global save.
	(save_yourself_callback): don't not save session state
	if the save style is Global. Fixes #89390.

	* theme-format.txt: update.

2002-07-30  Pablo Saratxaga  <pablo@mandrakesoft.com>

	* configure.in: Added Vietnamese (vi) to ALL_LINGUAS

2002-07-24  Havoc Pennington  <hp@pobox.com>

	* src/themes/Makefile.am (THEMES): add Metabox theme from Garrett

	* README: updates

2002-07-21  Havoc Pennington  <hp@pobox.com>

	* src/window.c (meta_window_new): don't automaximize fullscreen
	windows.

2002-07-14  Havoc Pennington  <hp@pobox.com>

	* src/window.c (recalc_window_features): don't allow shading of
	border-only windows.

2002-07-24  Havoc Pennington  <hp@redhat.com>

	* src/theme-parser.c (meta_theme_load): look for themes in
	~/.themes/NAME/metacity-1/ and datadir/themes/NAME/metacity-1 
	instead of the old locations.

	* src/themes/Makefile.am: install themes to
	datadir/themes/NAME/metacity-1/ to match how GTK works, breaking 
	third-party themes yet again! woot!
