@@ -1,3 +1,8 @@
+2002-08-03  Craig Black  <blackc@speakeasy.net>
+
+	* src/display.c: (event_callback): Have ButtonPress and UnmapNotify
+  events account for a null grab window, fixes #87896
+
 2002-08-03  Gaute Lindkvist <lindkvis@linpro.no>
 
 	Corrected some issues with the Bright theme. Mainly
